--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@brainhubeu/react-carousel": "^2.0.4",
     "bootstrap": "^5.2.3",
+    "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
