--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@brainhubeu/react-carousel": "^2.0.4",
     "bootstrap": "^5.2.3",
+    "firebase": "^10.1.0",
     "google-map-react": "^2.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
