--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.7.2",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.10.0"
