--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@brainhubeu/react-carousel": "^2.0.4",
+    "@reduxjs/toolkit": "^1.9.5",
     "bootstrap": "^5.2.3",
     "firebase": "^10.1.0",
     "google-map-react": "^2.2.1",
@@ -20,7 +21,9 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.8.0",
     "react-image-gallery": "^1.3.0",
-    "react-router-dom": "^6.10.0"
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.10.0",
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
