--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@brainhubeu/react-carousel": "^2.0.4",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "firebase": "^10.1.0",
     "google-map-react": "^2.2.1",
